recursion.cons.remove.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
  
  if(l.head != v)
  l::l.head
  else
  if(l.tail!=v)
  l::l.tail
  return remove(l)
  
}
